# tracking-person

./: .gitignore  TERMINAL_COMMANDS.md  check_duplicate_timeoffsets.py  check_person_id.py  debug_bbox_timing.py  debug_db.py  fix_minio_policy.py  open_database_file.py  pa_100k_manage.py  pyproject.toml  requirements.txt  temp_routes.py  terminal_demo.py  terminal_test.py  test_color_sys.py  test_embedding.py  test_stream.py
config/: default_settings.json
my-thesis-report/: main.md  references.bib
my-thesis-report/chapters/: 00-front-matter.md  01-introduction.md  02-literature.md  03-methodology.md  04-results.md  05-conclusion.md
python/: capture.py  dotmat.py
python/autometion_finder/: main.py  pipeline_test.py
python/build_test/: combind_video.py  find_person.py
python/debug/: debug_frame.py
python/manage_img/: manager.py
python/test_model/: all_model.py  check_phy_model.py  fashion_3.py  resnet.py  test_yolo_model.py
python/tracking_project/: detection_tracking.py  quick_test.py  test_comprehensive_system.py  test_database_integration.py  test_hybrid_tracking.py  test_tracking.py
src/: main.py
src/ai/: __init__.py  classifier.py  color_analysis.py  color_system.py  detector.py  feature_extractor.py  reid_utils.py  tracker.py
src/api/: controllers.py  main.py  schemas.py  video_controller.py
src/api/routes/: camera_management.py  camera_relationships.py  cameras_api.py  dashboard_api.py  realtime.py  relationships_api.py  settings_api.py
src/services/: __init__.py  ai_processor.py  database.py  database_fixed.py  storage.py  stream_manager.py
src/test/: benchmark_db.py  connect_db_test.py  test_gpu.py
src/utils/: video_loader.py
tests/: __init__.py  conftest.py
tests/e2e/: test_api_endpoints.py
tests/integration/test_database/: test_benchmark.py  test_connection.py
tests/manual/: test_yolo_model.py
tests/unit/: test_gpu.py  test_reid_utils.py
ui/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
ui/src/app/: globals.css  layout.tsx
ui/src/app/camera-management/: CameraDiagram.tsx  CameraList.tsx  RelationshipList.tsx  hooks.ts  page-original.tsx  page.tsx  types.ts
ui/src/app/dashboard/: page.tsx
ui/src/app/input-manager/: page.tsx
ui/src/app/investigation/: page.tsx
ui/src/app/search/: page.tsx
ui/src/app/system/: page.tsx
ui/src/components/dashboard/: EventFeed.tsx  (+4 more)
ui/src/lib/: api.ts
ui/src/types/: index.ts
(+42 files in other folders)
