[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "boxmot>=16.0.11",
    "deep-sort-realtime>=1.3.2",
    "fastapi>=0.135.1",
    "google-genai>=1.67.0",
    "minio>=7.2.20",
    "opencv-python>=4.13.0.92",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "setuptools>=82.0.1",
    "sqlalchemy>=2.0.46",
    "ultralytics>=8.4.21",
    "uvicorn>=0.42.0",
    "vidgear>=0.3.4",
    "yt-dlp>=2026.2.21",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.0.0",
    "transformers",
    "olefile>=0.47",
    "moviepy>=2.2.1",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
